--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"node-html-parser": "^7.0.1"
 	}
 }
