fix: resolve pull request issue with Obsidian usage in ID fields

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-yt-video-summarizer",
+	"id": "yt-video-summarizer",
 	"name": "YouTube Video Summarizer",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
