fix: synchronize versions across manifest and releases
- Align version numbers in manifest.json and versions.json
- Ensure GitHub release tags match manifest version
- Fix version bump script to maintain consistency

Files:
- manifest.json
- versions.json
- version-bump.mjs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,11 +43,16 @@ jobs:
             new_ver="$major.$minor.$((patch + 1))"
           fi
           
-          npm version $new_ver --no-git-tag-version
-          echo "version=${new_ver}" >> $GITHUB_ENV
+          # Set both env and output
+          echo "VERSION=$new_ver" >> $GITHUB_ENV
+          echo "version=$new_ver" >> $GITHUB_OUTPUT
           
       - name: Update versions
-        run: node version-bump.mjs
+        env:
+          VERSION: ${{ env.VERSION }}
+        run: |
+          npm version $VERSION --no-git-tag-version
+          node version-bump.mjs
           
       - name: Build project
         run: npm run build
@@ -58,8 +63,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
-          tag_name: v${{ env.version }}
-          release_name: Release ${{ env.version }}
+          tag_name: ${{ env.VERSION }}
+          release_name: ${{ env.VERSION }}
           draft: false
           prerelease: false
 
@@ -98,5 +103,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add package.json manifest.json versions.json
-          git commit -m "chore: bump version to ${{ env.version }}"
+          git commit -m "chore: bump version to ${{ env.VERSION }}"
           git push
